# DisbaTomo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/lvl-large/: config_inv.yml  model_data.txt
demo/lvl-large/data/: 0.txt
demo/regular-large/: config_forward.yml  config_forward2.yml  config_inv.yml  model_data.txt  model_init2.txt
demo/regular-large/data/: 0.txt
include/: gradient.hpp  gradient_psv.hpp  gradient_sh.hpp
python/: determine_lcurve.py  empirical_relation.py  forward.py  inversion.py  objective_function.py  output_figure.py  output_model.py  plot_disp.py  plot_inversion.py  plot_kernel.py  plot_lcurve.py  plot_model.py
src/: CMakeLists.txt  gradient.cc  gradient_psv.cc  gradient_sh.cc  pybind.cc
